# slambook

ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch3/useEigen/: CMakeLists.txt  coordinateTransform.cpp  coordinateTransform.h  eigenMatrix.cpp  main.cpp  plotTrajectory.cpp  plotTrajectory.h  useGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
